# mm32g0001-rs

./: Cargo.toml  MM32G0001_Series.yaml
.cargo/: config.toml
blink/: Cargo.toml
blink/src/: main.rs
blink_async/: Cargo.toml
blink_async/src/: main.rs
examples/blink/: Cargo.toml
examples/blink-async/: Cargo.toml
examples/blink-async/src/: main.rs
examples/blink/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
hello-world/: Cargo.toml
hello-world/.cargo/: config.toml
hello-world/src/: main.rs
mm32-pac/: Cargo.toml  Makefile
mm32-pac/src/: crc.rs  exti.rs  i2c1.rs  iwdg.rs  rcc.rs
mm32-pac/src/adc1/: adcmpr.rs  addata.rs  adsta.rs  any_cfg.rs  any_cr.rs  chany0.rs
mm32-pac/src/dbg/: cr.rs
mm32-pac/src/exti/: imr.rs  swier.rs
mm32-pac/src/flash/: ar.rs  obr.rs  wrpr.rs
mm32-pac/src/gpioa/: bsrr.rs  dcr.rs
mm32-pac/src/gpiob/: afrh.rs  bsrr.rs  crl.rs
mm32-pac/src/i2c1/: enr.rs  fslr.rs  imr.rs  setup.rs  slvmask.rs  slvrcvaddr.rs  tar.rs
mm32-pac/src/iwdg/: cr.rs  sr.rs
mm32-pac/src/pwr/: cr.rs  csr.rs
mm32-pac/src/rcc/: ahbrstr.rs  apb1enr.rs  cfgr.rs  cir.rs  cr.rs
mm32-pac/src/spi1/: intclr.rs  inten.rs  intstat.rs  nssr.rs  rxdnr.rs
mm32-pac/src/syscfg/: cfgr.rs  exticr1.rs  exticr2.rs  exticr3.rs  exticr4.rs
mm32-pac/src/tim1/: ccer.rs  ccmr2_output.rs  cr2.rs  dier.rs  egr.rs
mm32-pac/src/tim14/: ccmr1_output.rs  cnt.rs  cr1.rs  egr.rs
mm32-pac/src/tim3/: ccer.rs  ccmr2_input.rs  ccr4.rs  cr1.rs  cr2.rs  dier.rs  or.rs  sr.rs
mm32-pac/src/usart1/: cr1.rs  dr.rs
mm32g0001-pac/: Cargo.toml  MM32G0001.svd  device.x
mm32g0001-pac/src/: adc1.rs  dbg.rs  gpiob.rs  lib.rs  syscfg.rs  tim1.rs  tim14.rs  tim3.rs
mm32g0001-pac/src/adc1/: adcfgr.rs  adcr.rs  chany1.rs
(+69 files in other folders)
