[package]
name = "blink-async"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = {version = "0.7.5", features = ["device"]}
panic-halt = "1.0.0"
mm32g0001-pac = { path = "../../mm32g0001-pac", features = ["rt"]}
rtt-target = { version = "0.6.1", features = ["defmt"] }
embassy-futures = "0.1.1"
defmt = "1.0.1"

